--- a/src/main/resources/public/pages/manage/plugins.html
+++ b/src/main/resources/public/pages/manage/plugins.html
@@ -115,7 +115,7 @@
 						<button style="margin-bottom: 10px;" type="button" class="btn btn-blue query-btn" id="query"><span class="glyphicon glyphicon-search"></span> 查询</button>
 					</div>
 					<div class="form-group">
-				    	<button style="margin-bottom: 10px;" type="button" class="btn btn-blue add_btn" data-toggle="modal" data-target=".new-modal"><span class="glyphicon glyphicon-plus"></span> 新增</button>
+				    	<button style="margin-bottom: 10px;" type="button" class="btn btn-blue add_btn"><span class="glyphicon glyphicon-plus"></span> 新增</button>
 					</div>
 					<div style="clear:both"></div>
 				</div>
