--- a/src/main/resources/public/pages/manage/plugins_add.html
+++ b/src/main/resources/public/pages/manage/plugins_add.html
@@ -390,7 +390,7 @@
            	 <div class="form-group" style="width: auto">
 				<label class="label-text">插件ID：</label>
 				<input type="text" name="pluginid" class="form-control" id="pluginid"/>
-				<input type="checkbox"/><span class="checkbox-text">自动生成ID</span>
+				<input type="checkbox" id="auto_pluginid"/><span class="checkbox-text">自动生成ID</span>
 		    </div>
         	<div class="form-group" style="width: auto">
 				<label class="label-text">插件名称：</label>
