--- a/src/main/resources/public/pages/manage/tasks.html
+++ b/src/main/resources/public/pages/manage/tasks.html
@@ -84,8 +84,7 @@
 					   	</div>
 					   	<span class="shuxian"></span>
 					   	<div class="tasks-content tasks-listenter" id="logTask">
-					   	    <div>
-					   	        <h4 class="task-title">[taskId]&nbsp名字</h4>
+					   	    <div id="taskIdName">
 					   	    </div>
 					   	    <div style="margin-top: 10px">
 					   	        <a onclick="message()" href="javascript:void(0)" class="opt-text">运行信息</a>
