--- a/src/main/resources/public/pages/manage/server.html
+++ b/src/main/resources/public/pages/manage/server.html
@@ -211,7 +211,7 @@
 					</div>
 					<div class="form-group">
 						<label>说明：</label> 
-							<input type="text" id="memo" class="form-control input-sm required" v-model="modelData.memo" :style="modelData.memo === '' ? 'background: #FFF3F3 !important;' : 'background: none !important;'" data-container="body" data-toggle="popover" data-placement="right" data-content="" placeholder="" />
+							<input type="text" id="memo" class="form-control input-sm" v-model="modelData.memo" :style="modelData.memo === '' ? 'background: #FFF3F3 !important;' : 'background: none !important;'" placeholder="" />
 					</div>
 				</div>
 				<div class="modal-footer">
@@ -273,7 +273,7 @@
 					</div>
 					<div class="form-group">
 						<label>应用服务器说明：</label> 
-						<input type="text" id="applicationmemo" class="form-control input-sm required" v-model="modelData.applicationmemo" :style="modelData.applicationmemo === '' ? 'background: #FFF3F3 !important;' : 'background: none !important;'" data-container="body" data-toggle="popover" data-placement="right" data-content="" placeholder="" />
+						<input type="text" id="applicationmemo" class="form-control input-sm" v-model="modelData.applicationmemo" :style="modelData.applicationmemo === '' ? 'background: #FFF3F3 !important;' : 'background: none !important;'" placeholder="" />
 					</div>
 					<div class="form-group">
 						<label>应用服务器监控端口：</label> 
