--- a/src/main/resources/public/pages/manage/plugins_edit.html
+++ b/src/main/resources/public/pages/manage/plugins_edit.html
@@ -408,7 +408,7 @@
         	<legend></legend>
        		 <div class="form-group" style="width: auto">
 				<label>插件包含的文件：</label>
-				<a href="#" id="addfield" onclick="">添加文件</a>
+				<a href="#" class="btn btn-sm btn-primary" id="addfield" onclick="">添加文件</a>
 			</div>
 			<div class="form-group" style="width: auto">
 				<label>注：上传class、jar文件不用指定服务器保存路径；其它文件需要指定服务器保存路径，如com/test/my.properties。</label>
