--- a/src/main/resources/public/pages/manage/database_config.html
+++ b/src/main/resources/public/pages/manage/database_config.html
@@ -138,7 +138,7 @@
 							<td>{{index+1}}</td>
 			                <td>{{tabtr.name}}</td>
 			                <td style="table-layout:fixed;">{{tabtr.driver}}</td>
-			                <td>{{tabtr.url}}</td>
+			                <td class="hidden_length">{{tabtr.url}}</td>
 			                <td>{{tabtr.user}}</td>
 			                <!-- <td>{{tabtr.pass}}</td> -->
                             <td>
