--- a/src/main/resources/public/pages/manage/tasks.html
+++ b/src/main/resources/public/pages/manage/tasks.html
@@ -158,8 +158,8 @@
 					   	                 <td>ftp 用户</td>
 					   	             </tr> -->
 					   	        </tbody>
-					   	        <input type="submit" id="submitConfig" value="保存配置" />
 					   	    </table>
+					   	    <input type="submit" id="submitConfig" style="margin-top: 5px;" value="保存配置" />
 					   	    </div>	
 					   	</div>
 					   	<div class="tasks-content tasks-new" id="newTask">
@@ -247,7 +247,7 @@
 					         </fieldset>
 					         <fieldset>
 					            <legend>
-					                <input id="taskAlert" type="checkbox" value="1"/><span class="checkbox-text">任务监控报警</span>
+					                <input id="taskAlert" type="checkbox" value="1" /><span class="checkbox-text">任务监控报警</span>
 					            </legend>
 					            <div class="form-group" style="width: auto">
 							    <label>出错报警方式:</label>
