--- a/src/main/resources/public/pages/manage/tasks.html
+++ b/src/main/resources/public/pages/manage/tasks.html
@@ -33,7 +33,9 @@
 	     <div class="accordion">
 	        <dl>
 				<dt class="active">
-					<h4 class="activity-title"><span class="activity-ico icon_4g"></span><span>应用1</span></h4>
+				    <div  id="serverName">
+				        <!-- <h4 class="activity-title"><span class="activity-ico icon_4g"></span><span>应用1</span></h4> -->
+				    </div>
 					<div class="ope-btn">
 					    <button  id="selection" type="button" value="0" class="btn btn-blue query-btn"><span class="glyphicon glyphicon-search"></span> 全选</button>
 					    <button  id="start" type="button" class="btn btn-blue query-btn"><span class="glyphicon glyphicon-search"></span> 启动</button>
